<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <Preference
        app:key="settings_version"
        app:title="@string/settings_build_version"
        app:summary="1.0.0"/>
    <PreferenceCategory
        app:key="settings_date_time_category"
        app:title="@string/settings_date_time_format_category"
        >
        <DropDownPreference
            app:title="@string/settings_date_format"
            app:key="settings_date_format"
            app:entries="@array/settings_date_format_entries"
            app:entryValues="@array/settings_date_format_values"
            app:summary="set date format"
            app:useSimpleSummaryProvider="true"
            />
        <DropDownPreference
            app:title="@string/settings_time_format"
            app:key="settings_time_format"
            app:entries="@array/settings_time_format_entries"
            app:entryValues="@array/settings_time_format_values"
            app:useSimpleSummaryProvider="true"
            />
    </PreferenceCategory>

</PreferenceScreen>