<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/alert_dialog_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/form_back_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/main_activity_alert_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/form_discard_yes"
        style="@style/app_button_default_style"
        android:layout_margin="10dp"
        android:text="@string/task_form_yes_toast_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/form_discard_no"
        app:layout_constraintTop_toBottomOf="@+id/form_back_header"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/form_discard_no"
        style="@style/app_button_default_style"
        android:layout_margin="10dp"
        android:text="@string/task_form_no_toast_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_back_header"
        app:layout_constraintVertical_bias="0.2" />
</androidx.constraintlayout.widget.ConstraintLayout>