<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="2dp">

    <TextView
        android:id="@+id/task_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:layout_margin="2dp"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/task_item_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/task_item_alarm_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/task_item_has_alarm_desc"
        android:src="@drawable/task_list_item_alarm"
        app:layout_constraintBottom_toTopOf="@+id/task_item_name"
        app:layout_constraintEnd_toStartOf="@+id/task_item_contacts_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/task_item_list_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/task_item_has_list_desc"
        android:src="@drawable/ic_task_list_icon"
        app:layout_constraintBottom_toTopOf="@+id/task_item_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/task_item_contacts_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/task_item_has_contact_list_desc"
        android:src="@drawable/ic_task_contacts_icon"
        app:layout_constraintBottom_toTopOf="@+id/task_item_name"
        app:layout_constraintEnd_toStartOf="@+id/task_item_list_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_item_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/tast_item_name_background"
        android:layout_margin="1dp"
        android:padding="5dp"
        android:textColor="@color/task_name"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>